manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-smplverse
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - metadata.smplverse.xyz
      secretName: ingress-smplverse-tls
  rules:
    - host: metadata.smplverse.xyz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: metadata-api-port
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: metadata-api-port
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    name: metadata-api
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smplverse-metadata
spec:
  selector:
    matchLabels:
      name: metadata-api
  replicas: 10
  template:
      metadata:
        labels:
          name: metadata-api
      spec:
        containers:
          - name: metadata-api
            image: docker.io/piotrostr/metadata
            ports:
              - containerPort: 80
        imagePullSecrets:
          - name: regcred
        restartPolicy: Always
